when rendering in texture mode with workbench, material alpha values default to 0.5 regardless of actual alpha value #65035

Closed
opened 2019-05-23 15:19:52 +02:00 by Jesse RJ · 4 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: 3dc9da3a74
Worked: (optional)

Short description of error
When texture rendering is selected using the workbench render, materials with transparencies do become transparent, but they default to 0.5 alpha regardless of the actual alpha value set for the material color.

Exact steps for others to reproduce the error
Example blend file provided. Switch between texture render and material render to see effect on alpha in the viewport
To recreate:
add a material to default cube,
set an alpha value of 0.1
set rendering mode to texture with workbench,
switch between material and texture render to see the difference.

texture_renderTransparency1.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: `3dc9da3a74` Worked: (optional) **Short description of error** When texture rendering is selected using the workbench render, materials with transparencies do become transparent, but they default to 0.5 alpha regardless of the actual alpha value set for the material color. **Exact steps for others to reproduce the error** Example blend file provided. Switch between texture render and material render to see effect on alpha in the viewport To recreate: add a material to default cube, set an alpha value of 0.1 set rendering mode to texture with workbench, switch between material and texture render to see the difference. [texture_renderTransparency1.blend](https://archive.blender.org/developer/F7063308/texture_renderTransparency1.blend)
Author

Added subscriber: @rhaven

Added subscriber: @rhaven
Jeroen Bakker self-assigned this 2019-05-23 15:51:01 +02:00
Member

Ah see the issue, the alpha value is read from the shading.xray_alpha setting, but should be from the material.

Ah see the issue, the alpha value is read from the `shading.xray_alpha` setting, but should be from the material.

This issue was referenced by 28ad1e0b1f

This issue was referenced by 28ad1e0b1f0ab2724fec92b1094f7e1313b0e7ab
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65035
No description provided.